-----------
v6.0.0beta2
-----------

[mms] Fix regression in select all checkbox on traditional mailbox page (Bug
      #11317).
[mms] Fix regression in altering sort direction in dynamic mailbox view (Bug
      #11300).
[mms] Hide empty MIME parts when displaying inline.
[mms] Fix expanding all mailboxes in dynamic view (Bug #11289).
[mms] Fix handling of identity tie-to addresses when searching for matching
      identities.
[mms] Fix recursive mailbox delete in dynamic view (Bug #11288).


-----------
v6.0.0beta1
-----------

[mms] Fix regression in sorting of special mailboxes (Bug #11241).
[mms] Fix mailbox sorting in traditional view (Bug #11278).
[mms] Fix regression in IMAP cache query script preventing stats in all mailbox
      reports (Bug #11265).
[mms] Fix regression in creating submailboxes in dynamic view.
[jan] Fix displaying messages in a popup (Bug #11251).
[jan] Fix automatic selection of the default identity if other identities
      contain the same address(es).
[jan] Fix editing mailbox ACLs (Bug #11247).
[jan] Fix using admin users and passwords for quota or mailbox management.


------------
v6.0.0alpha1
------------

[mms] Fix browser-based AJAX autocompletion (Bug #11233).
First alpha release for Horde 5.
[mms] Only show Inbox, special mailboxes, and polled mailboxes by default in
      smartmobile view.
[mms] Add 'reply_strip_sig' preference (Request #11056).
[mms] Move attachment strip icon to MIME part tree display.
[mms] Convert dynamic view to Horde_View.
[mms] Convert minimal view to Horde_View.
[mms] Honor initial_page preference in smartmobile view (Request #11165).
[mms] Lock mailbox sort to descending date when using minimal view.
[mms] Pre-fetch next unseen message in INBOX in dynamic view.
[mms] Allow Edit As New to be used as the default forward action (Request
      #11135).
[mms] Improved handling of messages with multiple From addresses in mailbox
      views.