@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix regression preventing contacts popup window from working (Bug #11324).
 * [mms] Fix regression in select all checkbox on traditional mailbox page (Bug #11317).
 * [mms] Fix regression in altering sort direction in dynamic mailbox view (Bug #11300).
 * [mms] Hide empty MIME parts when displaying inline.
@@ -2622,6 +2623,7 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression preventing contacts popup window from working (Bug #11324).
 * [mms] Fix regression in select all checkbox on traditional mailbox page (Bug #11317).
 * [mms] Fix regression in altering sort direction in dynamic mailbox view (Bug #11300).
 * [mms] Hide empty MIME parts when displaying inline.
